--- a/analyze/Basic_Analyze.ipynb
+++ b/analyze/Basic_Analyze.ipynb
@@ -2761,7 +2761,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9810c0da",
+   "id": "e2c983cf",
    "metadata": {},
    "outputs": [
     {
@@ -2795,13 +2795,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "46338b25",
+   "cell_type": "markdown",
+   "id": "39717be5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "keras.models.save_model(model, \"basic_model.h5\")"
+    "#### keras.models.save_model(model, \"basic_model.h5\")"
    ]
   },
   {
@@ -3050,7 +3048,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "32fe0511",
+   "id": "32eb32e5",
    "metadata": {},
    "outputs": [],
    "source": [
