--- a/analyze/Convert_Models.ipynb
+++ b/analyze/Convert_Models.ipynb
@@ -2,27 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c5669a44",
+   "execution_count": 62,
+   "id": "f358d3f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-13 12:52:33.229693: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-04-13 12:52:33.229769: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "1f1c8873",
+   "execution_count": 63,
+   "id": "0e05c690",
    "metadata": {
     "scrolled": false
    },
@@ -31,23 +22,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmple2qn8u3/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmpgw5vsat3/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmple2qn8u3/assets\n",
-      "2022-04-13 12:56:20.388204: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
-      "2022-04-13 12:56:20.388282: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
-      "2022-04-13 12:56:20.388573: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmple2qn8u3\n",
-      "2022-04-13 12:56:20.391963: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
-      "2022-04-13 12:56:20.392021: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmple2qn8u3\n",
-      "2022-04-13 12:56:20.422623: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
-      "2022-04-13 12:56:20.507270: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmple2qn8u3\n",
-      "2022-04-13 12:56:20.540405: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 151835 microseconds.\n",
-      "2022-04-13 12:56:20.884785: W tensorflow/compiler/mlir/lite/flatbuffer_export.cc:1891] TFLite interpreter needs to link Flex delegate in order to run the model since it contains the following Select TFop(s):\n",
+      "INFO:tensorflow:Assets written to: /tmp/tmpgw5vsat3/assets\n",
+      "2022-04-13 16:57:30.409020: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
+      "2022-04-13 16:57:30.409090: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
+      "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
+      "2022-04-13 16:57:30.409327: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmpgw5vsat3\n",
+      "2022-04-13 16:57:30.412562: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
+      "2022-04-13 16:57:30.412595: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmpgw5vsat3\n",
+      "2022-04-13 16:57:30.426665: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
+      "2022-04-13 16:57:30.481245: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmpgw5vsat3\n",
+      "2022-04-13 16:57:30.508321: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 98996 microseconds.\n",
+      "2022-04-13 16:57:30.619816: W tensorflow/compiler/mlir/lite/flatbuffer_export.cc:1891] TFLite interpreter needs to link Flex delegate in order to run the model since it contains the following Select TFop(s):\n",
       "Flex ops: FlexTensorListFromTensor, FlexTensorListGetItem, FlexTensorListReserve, FlexTensorListSetItem, FlexTensorListStack\n",
       "Details:\n",
       "\ttf.TensorListFromTensor(tensor<5x?x3xf32>, tensor<2xi32>) -> (tensor<!tf_type.variant<tensor<?x3xf32>>>) : {device = \"\"}\n",
@@ -55,12 +47,7 @@
       "\ttf.TensorListReserve(tensor<2xi32>, tensor<i32>) -> (tensor<!tf_type.variant<tensor<?x8xf32>>>) : {device = \"\"}\n",
       "\ttf.TensorListSetItem(tensor<!tf_type.variant<tensor<?x8xf32>>>, tensor<i32>, tensor<?x8xf32>) -> (tensor<!tf_type.variant<tensor<?x8xf32>>>) : {device = \"\"}\n",
       "\ttf.TensorListStack(tensor<!tf_type.variant<tensor<?x8xf32>>>, tensor<2xi32>) -> (tensor<?x?x8xf32>) : {device = \"\", num_elements = -1 : i64}\n",
-      "See instructions: https://www.tensorflow.org/lite/guide/ops_select\n",
-      "2022-04-13 12:56:20.885427: I tensorflow/lite/tools/optimize/quantize_weights.cc:225] Skipping quantization of tensor sequential_37/layer2/MatMul because it has fewer than 1024 elements (64).\n",
-      "2022-04-13 12:56:20.885484: I tensorflow/lite/tools/optimize/quantize_weights.cc:225] Skipping quantization of tensor sequential_37/out/MatMul because it has fewer than 1024 elements (8).\n",
-      "2022-04-13 12:56:20.885505: I tensorflow/lite/tools/optimize/quantize_weights.cc:225] Skipping quantization of tensor sequential_37/rnnlayer/while/simple_rnn_cell_1/MatMul_1 because it has fewer than 1024 elements (64).\n",
-      "2022-04-13 12:56:20.885521: I tensorflow/lite/tools/optimize/quantize_weights.cc:225] Skipping quantization of tensor sequential_37/rnnlayer/while/simple_rnn_cell_1/MatMul because it has fewer than 1024 elements (24).\n",
-      "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n"
+      "See instructions: https://www.tensorflow.org/lite/guide/ops_select\n"
      ]
     }
    ],
@@ -70,10 +57,7 @@
     "model = tf.keras.models.load_model(f'./{model_name}.h5')\n",
     "\n",
     "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
-    "converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
-    "converter.experimental_new_converter=True\n",
-    "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS,\n",
-    "tf.lite.OpsSet.SELECT_TF_OPS]\n",
+    "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS,tf.lite.OpsSet.SELECT_TF_OPS]\n",
     "\n",
     "tflite_model = converter.convert()\n",
     "\n",
@@ -84,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9e619d02",
+   "execution_count": 64,
+   "id": "86bce468",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,12 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "d7f9dcdf",
+   "execution_count": 65,
+   "id": "6daa27e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "interpreter = tf.lite.Interpreter('basic_model.tflite')\n",
+    "interpreter = tf.lite.Interpreter('best_model_ever.tflite')\n",
     "interpreter.allocate_tensors()\n",
     "input_details = interpreter.get_input_details()\n",
     "output_details = interpreter.get_output_details()"
@@ -107,23 +91,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "93c54773",
+   "execution_count": 66,
+   "id": "f762045f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]\n",
+      "  [0. 0. 0.]]]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[0.19841823]], dtype=float32)"
+       "array([[0.06695357]], dtype=float32)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "interpreter.set_tensor(input_details[0]['index'], np.array([[0.5,0.1]], dtype='float32'))\n",
+    "inp = np.array([[[0,0,0] for _ in range(5)]], dtype='float32')\n",
+    "print(inp)\n",
+    "interpreter.set_tensor(input_details[0]['index'], inp)\n",
     "interpreter.invoke()\n",
     "interpreter.get_tensor(output_details[0]['index'])"
    ]
@@ -131,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c62aab",
+   "id": "aa55e130",
    "metadata": {},
    "outputs": [],
    "source": []
