--- a/analyze/Convert_Models.ipynb
+++ b/analyze/Convert_Models.ipynb
@@ -2,17 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "f358d3f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-13 17:53:17.221872: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-04-13 17:53:17.221980: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "id": "0e05c690",
    "metadata": {
     "scrolled": false
@@ -22,24 +31,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmpgw5vsat3/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmp7virbm2f/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmpgw5vsat3/assets\n",
-      "2022-04-13 16:57:30.409020: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
-      "2022-04-13 16:57:30.409090: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
-      "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
-      "2022-04-13 16:57:30.409327: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmpgw5vsat3\n",
-      "2022-04-13 16:57:30.412562: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
-      "2022-04-13 16:57:30.412595: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmpgw5vsat3\n",
-      "2022-04-13 16:57:30.426665: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
-      "2022-04-13 16:57:30.481245: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmpgw5vsat3\n",
-      "2022-04-13 16:57:30.508321: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 98996 microseconds.\n",
-      "2022-04-13 16:57:30.619816: W tensorflow/compiler/mlir/lite/flatbuffer_export.cc:1891] TFLite interpreter needs to link Flex delegate in order to run the model since it contains the following Select TFop(s):\n",
+      "INFO:tensorflow:Assets written to: /tmp/tmp7virbm2f/assets\n",
+      "2022-04-13 17:54:10.716022: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
+      "2022-04-13 17:54:10.716096: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
+      "2022-04-13 17:54:10.716348: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmp7virbm2f\n",
+      "2022-04-13 17:54:10.719577: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
+      "2022-04-13 17:54:10.719609: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmp7virbm2f\n",
+      "2022-04-13 17:54:10.744262: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
+      "2022-04-13 17:54:10.798509: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmp7virbm2f\n",
+      "2022-04-13 17:54:10.824567: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 108221 microseconds.\n",
+      "2022-04-13 17:54:11.083353: W tensorflow/compiler/mlir/lite/flatbuffer_export.cc:1891] TFLite interpreter neeWARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
+      "ds to link Flex delegate in order to run the model since it contains the following Select TFop(s):\n",
       "Flex ops: FlexTensorListFromTensor, FlexTensorListGetItem, FlexTensorListReserve, FlexTensorListSetItem, FlexTensorListStack\n",
       "Details:\n",
       "\ttf.TensorListFromTensor(tensor<5x?x3xf32>, tensor<2xi32>) -> (tensor<!tf_type.variant<tensor<?x3xf32>>>) : {device = \"\"}\n",
@@ -58,6 +67,7 @@
     "\n",
     "converter = tf.lite.TFLiteConverter.from_keras_model(model)\n",
     "converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS,tf.lite.OpsSet.SELECT_TF_OPS]\n",
+    "converter._experimental_lower_tensor_list_ops = False\n",
     "\n",
     "tflite_model = converter.convert()\n",
     "\n",
@@ -68,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "id": "86bce468",
    "metadata": {},
    "outputs": [],
@@ -78,12 +88,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "6daa27e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-13 18:00:52.553412: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-04-13 18:00:52.553466: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "INFO: Created TensorFlow Lite delegate for select TF ops.\n",
+      "2022-04-13 18:00:54.668068: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-04-13 18:00:54.668743: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-04-13 18:00:54.668772: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-04-13 18:00:54.668795: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (penguin): /proc/driver/nvidia/version does not exist\n",
+      "INFO: TfLiteFlexDelegate delegate: 3 nodes delegated out of 13 nodes with 2 partitions.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "interpreter = tf.lite.Interpreter('best_model_ever.tflite')\n",
+    "import tensorflow.lite as tflite\n",
+    "\n",
+    "interpreter = tflite.Interpreter('best_model_ever.tflite')\n",
     "interpreter.allocate_tensors()\n",
     "input_details = interpreter.get_input_details()\n",
     "output_details = interpreter.get_output_details()"
@@ -91,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "id": "f762045f",
    "metadata": {},
    "outputs": [
@@ -112,7 +141,7 @@
        "array([[0.06695357]], dtype=float32)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
