--- a/analyze/Convert_Models.ipynb
+++ b/analyze/Convert_Models.ipynb
@@ -10,8 +10,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-13 17:53:17.221872: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-04-13 17:53:17.221980: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-04-20 10:34:12.116873: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-04-20 10:34:12.116938: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -21,47 +21,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0e05c690",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-04-20 10:34:17.902353: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-04-20 10:34:17.902444: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-04-20 10:34:17.902501: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (penguin): /proc/driver/nvidia/version does not exist\n",
+      "2022-04-20 10:34:17.903078: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2022-04-20 10:34:18.227633: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp7virbm2f/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmpy9znpa1w/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmp7virbm2f/assets\n",
-      "2022-04-13 17:54:10.716022: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
-      "2022-04-13 17:54:10.716096: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
-      "2022-04-13 17:54:10.716348: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmp7virbm2f\n",
-      "2022-04-13 17:54:10.719577: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
-      "2022-04-13 17:54:10.719609: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmp7virbm2f\n",
-      "2022-04-13 17:54:10.744262: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
-      "2022-04-13 17:54:10.798509: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmp7virbm2f\n",
-      "2022-04-13 17:54:10.824567: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 108221 microseconds.\n",
-      "2022-04-13 17:54:11.083353: W tensorflow/compiler/mlir/lite/flatbuffer_export.cc:1891] TFLite interpreter neeWARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
-      "ds to link Flex delegate in order to run the model since it contains the following Select TFop(s):\n",
-      "Flex ops: FlexTensorListFromTensor, FlexTensorListGetItem, FlexTensorListReserve, FlexTensorListSetItem, FlexTensorListStack\n",
-      "Details:\n",
-      "\ttf.TensorListFromTensor(tensor<5x?x3xf32>, tensor<2xi32>) -> (tensor<!tf_type.variant<tensor<?x3xf32>>>) : {device = \"\"}\n",
-      "\ttf.TensorListGetItem(tensor<!tf_type.variant<tensor<?x3xf32>>>, tensor<i32>, tensor<2xi32>) -> (tensor<?x3xf32>) : {device = \"\"}\n",
-      "\ttf.TensorListReserve(tensor<2xi32>, tensor<i32>) -> (tensor<!tf_type.variant<tensor<?x8xf32>>>) : {device = \"\"}\n",
-      "\ttf.TensorListSetItem(tensor<!tf_type.variant<tensor<?x8xf32>>>, tensor<i32>, tensor<?x8xf32>) -> (tensor<!tf_type.variant<tensor<?x8xf32>>>) : {device = \"\"}\n",
-      "\ttf.TensorListStack(tensor<!tf_type.variant<tensor<?x8xf32>>>, tensor<2xi32>) -> (tensor<?x?x8xf32>) : {device = \"\", num_elements = -1 : i64}\n",
-      "See instructions: https://www.tensorflow.org/lite/guide/ops_select\n"
+      "2022-04-20 10:34:19.192792: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
+      "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
+      "2022-04-20 10:34:19.192863: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
+      "2022-04-20 10:34:19.193879: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmpy9znpa1w\n",
+      "2022-04-20 10:34:19.195583: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
+      "2022-04-20 10:34:19.195646: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmpy9znpa1w\n",
+      "2022-04-20 10:34:19.201972: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
+      "2022-04-20 10:34:19.244231: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmpy9znpa1w\n",
+      "2022-04-20 10:34:19.258254: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 64382 microseconds.\n",
+      "2022-04-20 10:34:19.274528: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:237] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n"
      ]
     }
    ],
    "source": [
-    "model_name = 'best_model_ever'\n",
+    "model_name = 'contextual_model'\n",
     "\n",
     "model = tf.keras.models.load_model(f'./{model_name}.h5')\n",
     "\n",
