better contexutututu model

--- a/analyze/Convert_Models.ipynb
+++ b/analyze/Convert_Models.ipynb
@@ -2,64 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "id": "f358d3f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-20 10:34:12.116873: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-04-20 10:34:12.116938: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "0e05c690",
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-20 10:34:17.902353: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-04-20 10:34:17.902444: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-04-20 10:34:17.902501: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (penguin): /proc/driver/nvidia/version does not exist\n",
-      "2022-04-20 10:34:17.903078: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-04-20 10:34:18.227633: W tensorflow/python/util/util.cc:368] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: /tmp/tmpy9znpa1w/assets\n"
+      "INFO:tensorflow:Assets written to: /tmp/tmper1x2asi/assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-04-20 10:34:19.192792: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
+      "INFO:tensorflow:Assets written to: /tmp/tmper1x2asi/assets\n",
+      "2022-04-20 21:32:39.108350: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:363] Ignored output_format.\n",
       "WARNING:absl:Buffer deduplication procedure will be skipped when flatbuffer library is not properly loaded\n",
-      "2022-04-20 10:34:19.192863: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
-      "2022-04-20 10:34:19.193879: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmpy9znpa1w\n",
-      "2022-04-20 10:34:19.195583: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
-      "2022-04-20 10:34:19.195646: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmpy9znpa1w\n",
-      "2022-04-20 10:34:19.201972: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
-      "2022-04-20 10:34:19.244231: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmpy9znpa1w\n",
-      "2022-04-20 10:34:19.258254: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 64382 microseconds.\n",
-      "2022-04-20 10:34:19.274528: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:237] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n"
+      "2022-04-20 21:32:39.108426: W tensorflow/compiler/mlir/lite/python/tf_tfl_flatbuffer_helpers.cc:366] Ignored drop_control_dependency.\n",
+      "2022-04-20 21:32:39.108713: I tensorflow/cc/saved_model/reader.cc:43] Reading SavedModel from: /tmp/tmper1x2asi\n",
+      "2022-04-20 21:32:39.110201: I tensorflow/cc/saved_model/reader.cc:107] Reading meta graph with tags { serve }\n",
+      "2022-04-20 21:32:39.110246: I tensorflow/cc/saved_model/reader.cc:148] Reading SavedModel debug info (if present) from: /tmp/tmper1x2asi\n",
+      "2022-04-20 21:32:39.119892: I tensorflow/cc/saved_model/loader.cc:210] Restoring SavedModel bundle.\n",
+      "2022-04-20 21:32:39.169519: I tensorflow/cc/saved_model/loader.cc:194] Running initialization op on SavedModel bundle at path: /tmp/tmper1x2asi\n",
+      "2022-04-20 21:32:39.187872: I tensorflow/cc/saved_model/loader.cc:283] SavedModel load for tags { serve }; Status: success: OK. Took 79160 microseconds.\n"
      ]
     }
    ],
@@ -81,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "86bce468",
    "metadata": {},
    "outputs": [],
@@ -91,31 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "6daa27e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-13 18:00:52.553412: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-04-13 18:00:52.553466: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
-      "INFO: Created TensorFlow Lite delegate for select TF ops.\n",
-      "2022-04-13 18:00:54.668068: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2022-04-13 18:00:54.668743: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-04-13 18:00:54.668772: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-04-13 18:00:54.668795: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (penguin): /proc/driver/nvidia/version does not exist\n",
-      "INFO: TfLiteFlexDelegate delegate: 3 nodes delegated out of 13 nodes with 2 partitions.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow.lite as tflite\n",
     "\n",
-    "interpreter = tflite.Interpreter('best_model_ever.tflite')\n",
+    "interpreter = tflite.Interpreter('contextual_model.tflite')\n",
     "interpreter.allocate_tensors()\n",
     "input_details = interpreter.get_input_details()\n",
     "output_details = interpreter.get_output_details()"
@@ -123,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "id": "f762045f",
    "metadata": {},
    "outputs": [
@@ -131,26 +93,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]\n",
-      "  [0. 0. 0.]]]\n"
+      "[[0.1 0.4 0.4]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.06695357]], dtype=float32)"
+       "array([[0.2606451]], dtype=float32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "inp = np.array([[[0,0,0] for _ in range(5)]], dtype='float32')\n",
+    "# inp = np.array([[[0,0,0] for _ in range(5)]], dtype='float32')\n",
+    "inp = np.array([[0.1,0.4,0.4]], dtype='float32')\n",
     "print(inp)\n",
     "interpreter.set_tensor(input_details[0]['index'], inp)\n",
     "interpreter.invoke()\n",
